added login controller, worked on authorization and authentication