@@ -2,6 +2,7 @@ package com.angadi.configuration;
 
 import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -14,7 +15,9 @@ import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
+@Configuration
 public class SecurityConfig {
 
     @Bean
@@ -29,12 +32,10 @@ public class SecurityConfig {
                     CorsConfiguration cfg = new CorsConfiguration();
 
                     cfg.setAllowedOrigins(Collections.singletonList("*"));
-                    //cfg.setAllowedOrigins(Arrays.asList("http://localhost:4200", "http://localhost:4500"));
-                    //cfg.setAllowedMethods(Arrays.asList("GET", "POST","DELETE","PUT"));
                     cfg.setAllowedMethods(Collections.singletonList("*"));
                     cfg.setAllowCredentials(true);
                     cfg.setAllowedHeaders(Collections.singletonList("*"));
-                    cfg.setExposedHeaders(Arrays.asList("Authorization"));
+                    cfg.setExposedHeaders(List.of("Authorization"));
                     cfg.setMaxAge(3600L);
                     return cfg;
                 })
@@ -42,9 +43,22 @@ public class SecurityConfig {
                 .addFilterAfter(new JwtTokenGeneratorFilter(), BasicAuthenticationFilter.class)
                 .addFilterBefore(new JwtTokenValidatorFilter(), BasicAuthenticationFilter.class)
                 .authorizeHttpRequests()
-                .requestMatchers(HttpMethod.POST, "/customers")
-                .permitAll().anyRequest()
-                .authenticated()
+                .requestMatchers("/customer/addCustomer").permitAll()
+                .requestMatchers("/customer/addCustomerAddress/").authenticated()
+                .requestMatchers("/customer/updateCustomer/").authenticated()
+                .requestMatchers("/customer/deleteCustomer/").authenticated()
+                .requestMatchers("/customer/getCustomerDetails/").authenticated()
+                .requestMatchers("/customer/getAllCustomerDetails/").hasRole("ADMIN")
+                .requestMatchers("/address/**").authenticated()
+                .requestMatchers("/orders/**").authenticated()
+                .requestMatchers("/orderDetails/**").authenticated()
+                .requestMatchers("/payments/**").authenticated()
+                .requestMatchers("/product/**").authenticated()
+                .requestMatchers("/shipping/**").authenticated()
+                .requestMatchers("/supplier/**").authenticated()
+                .requestMatchers("/wallet/**").authenticated()
+                .requestMatchers("/walletTransaction/**").authenticated()
+                .anyRequest().authenticated()
                 .and()
                 .formLogin()
                 .and()
